ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beatbuddy-ingress
  namespace: beatbuddy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: beatbuddy.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: beatbuddy-backend-svc
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beatbuddy-frontend-svc
                port:
                  number: 80
